[package]
name = "tsp-tools"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"
description = "generate locations and check route for tsp"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
rand_xoshiro = "0.4.0"
[build-dependencies]
clap = "2.33.0"